--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 		<!-- All in One SEO 4.7.7.2 - aioseo.com -->
 
-		<title>A</title>
+		<title>Amanda</title>
 	<meta name="description" content="465 fotos • 285 vídeos Eu, mais conhecida como Amanda almeida, cheguei chegando: livre, leve, solta e pronta para aprontar!🔥😈 Quero me conectar com esse meu lado mais sensual e entender também o que vc gostaria de ver por aqui...Vai rolar muito do meu dia a dia, muito dos meus treinos, viagens e eventos, muito" />
 	<meta name="robots" content="max-image-preview:large" />
 	<link rel="canonical" href="https://segredinho.click/juliana/" />
