--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@ var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":
 				<div class="elementor-element elementor-element-173c0a12 elementor-align-center elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="173c0a12" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.cakto.com.br/8pgud6c">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.cakto.com.br/9d87wfq">
 						<span class="elementor-button-content-wrapper">
-									<span class="elementor-button-text">Acesso vitalicio R$ 49,99</span>
+									<span class="elementor-button-text">Acesso vitalicio R$ 19,90</span>
 					</span>
 					</a>
 				</div>
