--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":
 				<div class="elementor-element elementor-element-173c0a12 elementor-align-center elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="173c0a12" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.cakto.com.br/9d87wfq">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://www.linkpriv.com/cce95ed6-c0da-49fe-ab73-fd4846b92d3c">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Acesso vitalicio R$ 19,90</span>
 					</span>
